Changed home page image; Disclaimer spacing; Resolved links in blog posts; Changed Shop the Store background

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -136,7 +136,9 @@
   width: 100%;
   height: 750px;
   background-image: url("../public/product_thumbnails/SacredHeartSquare.jpg");
-  background-size: cover;
+  background-size: 1200px;
+  background-color: rgb(15, 15, 15);
+  background-position: center;
   background-attachment: fixed;
   background-position-y: -100px;
   background-repeat: no-repeat;
@@ -339,6 +341,7 @@
   height: auto;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 30px;
   text-align: center;
 }
 
